--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-    <link href="css/css.css" rel="stylesheet">
     <meta charset="UTF-8">
-    <title>Agata Dobrowolska</title>
+    <title>Title</title>
+
+    <!--bootstrap -->
+
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome-iconpicker/1.3.1/css/fontawesome-iconpicker.css"
+          rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet"/>
+
+
 </head>
 <body>
-
-
-
+<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 
 <nav class="navbar">
     <nav class="navbar navbar-fixed-top">
@@ -40,27 +46,27 @@
     </nav>
 </nav>
 
-<div class="container-fluid" id="welcome-section" class="intro">
+<div class="container-fluid intro" id="welcome-section">
     <div class="container-fluid text-center">
 
 
         <br>
         <h1>Hello, my name is Agata
-            <h1>
+        </h1>
                 <p class="lead">
                     I want to become Front-End Developer.
                     My adventure with code is gathering pace.
                 </p>
     </div>
 </div>
-</div>
+
 
 
 <div id="projects">
     <div class="container-fluid text-center">
 
         <h1>Portfolio
-            <h1>
+        </h1>
 
                 <figure class="portfolio-item col-sm-4">
                     <a href="#"><img
@@ -111,14 +117,14 @@
                 </figure>
     </div>
 </div>
-</div>
+
 
 
 <div class="container-fluid text-center">
     <div id="contact">
         <div class="row">
             <h1>Contact me
-                <h1>
+            </h1>
                     <p class="lead">I can't wait to hear from you
                     </p>
         </div>
@@ -153,7 +159,7 @@
 <footer class="page-footer font-small indigo pt-0">
     <div class="footer-copyright py-3">
         <div class="text-center">
-            <div class="row"
+            <div class="row">
             <div class="col-md-2">
                 <h3>You can find me here</h3>
                 <a id="profile-link" target="_blank" href="https://www.linkedin.com/in/agata-dobrowolska-39828912b/">
@@ -169,8 +175,5 @@
     </div>
 </footer>
 <!--/Footer-->
-
-
 </body>
 </html>
-
