File README.md was added Scripts were added Without errors Text center at the bottom

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
           rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet"/>
 
+    <!--custom css -->
+    <link rel="stylesheet" type="text/css" href="css/css.css">
+    <!--custom js TODO -->
+
 
 </head>
 <body>
@@ -155,12 +159,12 @@
     </div>
 </div>
 <br>
+
 <!--Footer-->
-<footer class="page-footer font-small indigo pt-0">
+<div class="page-footer font-small indigo pt-0">
     <div class="footer-copyright py-3">
         <div class="text-center">
-            <div class="row">
-            <div class="col-md-2">
+
                 <h3>You can find me here</h3>
                 <a id="profile-link" target="_blank" href="https://www.linkedin.com/in/agata-dobrowolska-39828912b/">
                     <button class="btn btn-circle"><i class="fa fa-linkedin"></i></button>
@@ -169,11 +173,13 @@
                 <a id="profile-link" target="_blank" href="https://www.facebook.com/agata.dobrowolska.14">
                     <button class="btn btn-circle2"><i class="fa fa-facebook-f"></i></button>
                 </a>
-            </div>
+
+
         </div>
     </div>
-    </div>
-</footer>
+</div>
+
+
 <!--/Footer-->
 </body>
 </html>
